[gd_scene load_steps=6 format=3 uid="uid://dthnxlvp0igw"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_40osy"]
[ext_resource type="Texture2D" uid="uid://cggjs3bkxrh5x" path="res://assets/spheroidZero.png" id="2_diaie"]
[ext_resource type="Script" path="res://UsernameScript.gd" id="2_fxvbm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7252j"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xol22"]
light_mode = 1

[node name="MainMenu" type="Control"]
material = SubResource("CanvasItemMaterial_7252j")
layout_mode = 3
anchors_preset = 0
offset_right = 85.0
offset_bottom = 80.0
script = ExtResource("1_40osy")

[node name="But11" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_xol22")
layout_mode = 0
offset_left = 23.0
offset_top = 320.0
offset_right = 573.0
offset_bottom = 420.0
text = "1-1"

[node name="But12" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_xol22")
layout_mode = 0
offset_left = 589.0
offset_top = 318.0
offset_right = 1139.0
offset_bottom = 418.0
text = "1-2"

[node name="But13" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_xol22")
layout_mode = 0
offset_left = 23.0
offset_top = 435.0
offset_right = 573.0
offset_bottom = 535.0
text = "1-3"

[node name="But14" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_xol22")
offset_left = 587.0
offset_top = 436.0
offset_right = 1137.0
offset_bottom = 536.0
text = "1-4"

[node name="UsernameScript" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 572.0
offset_right = 760.0
offset_bottom = 627.0
placeholder_text = "Player0"
script = ExtResource("2_fxvbm")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 559.0
offset_top = 542.0
offset_right = 647.0
offset_bottom = 586.0
text = "Name:"

[node name="SpheroidZero" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(580, 153)
scale = Vector2(0.333008, 0.333008)
texture = ExtResource("2_diaie")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_left = -5.0
offset_top = -7.0
offset_right = 1152.0
offset_bottom = 653.0
mouse_filter = 2
color = Color(0.780392, 0.780392, 0.780392, 1)
